# SimplePdfBot

./: .breakpoints  .gitignore  Dockerfile  README.md  account.session  app.json  main.py  pyproject.toml  requirements.txt  tools.py
handlers/: database.py  tools.py
