[tool.poetry]
name = "pdfbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pyrogram = "^1.3.6"
TgCrypto = "^1.2.3"
img2pdf = "^0.4.3"
pykeyboard = "^0.1.4"
pyromod = "^1.5"
pymongo = "^4.0.1"
dnspython = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
